# KED2025

./: .gitignore  README.md  dodo.py  pyproject.toml  requirements.txt
docs/: assignments.html  index.html  lectures.html  materials.html  robots.txt  schedule.html  search.json  sitemap.xml
docs/assignments/assignment_2/: romeo_julia_vocab_frq.tsv
docs/materials/analysis/: viz_party_differences.html
docs/materials/code/: ked2024_07.ipynb  ked2024_08.ipynb  ked2024_10.ipynb  ked2025_07.ipynb  labeled_data.csv  ocr_surya.py  text_annotator.py
docs/materials/code/extract_forum_posts/: 1_Incels.html
docs/materials/data/: swiss_media_wokeness.tsv
docs/materials/data/scanned_pdf_sample/extracted/: fdp_scan_party_programme_1947.txt  sp_scan_party_programme_1947.txt
docs/site_libs/bootstrap/: bootstrap-35767d0a9e2ce7d8194500f7793b2e19.min.css  bootstrap-63ce579cb5967ce82eee89362e7a1b81.min.css  bootstrap-dark-0cb63971aedf6d9c37ea2026dd0d2adb.min.css  bootstrap-dark-4442caf29325b0f8287c33bb86aa02ba.min.css
ked/: _quarto.yml  assignments.qmd  index.qmd  lectures.qmd  light_styles.scss  materials.qmd  schedule.qmd
ked/assignments/assignment_1/: ked2024_assignment_1.md  ked2025_assignment_1.md
ked/assignments/assignment_2/: ked2024_assignment_2.md  ked2024_assignment_2_solution.ipynb  ked2025_assignment_2.md  romeo_julia_cleaned.txt  romeo_julia_vocab_frq.tsv
ked/lectures/md/: _quarto.yml  ked2024_01.md  ked2024_05.md  ked2024_06.md  ked2024_07.md  ked2024_11.md  ked2025_01.md  ked2025_02.md  ked2025_03.md  ked2025_04.md  ked2025_05.md  ked2025_06.md  ked2025_07.md  ked2025_08.md  ked2025_09.md  ked2025_10.md  ked2025_11.md  ked2025_12.md
ked/lectures/resources/: custom_style_reveal.scss  open-colors.css
ked/materials/: cheatsheet_command_line.md  installation_guide.md
ked/materials/analysis/: sents_poverty.txt  viz_party_differences.html  vocab_frq.tsv  vocab_frq.txt
ked/materials/code/: annotate.py  annotation_widget.py  bulk_label.py  few_shot_classification.py  ked2024_08.ipynb  ked2024_10.ipynb  ked2025_07.ipynb  ked2025_08.ipynb  ked2025_10.ipynb  labeled_data.csv  ocr.ipynb  old_annotate.py  python_basics.ipynb  scraping.py  text_annotator.py
ked/materials/data/: extended_swiss_media_wokeness.tsv  swiss_media_wokeness.tsv
ked/materials/data/swiss_party_programmes/: corpus_party_programmes.csv
ked2024/: _quarto.yml  assignments.qmd  dark_styles.scss  index.qmd  lectures.qmd  materials.qmd  schedule.qmd
ked2024/assignments/assignment_1/: ked2024_assignment_1.md
ked2024/assignments/assignment_2/: ked2024_assignment_2.md
ked2024/lectures/md/: _metadata.yml  ked2024_01.md  ked2024_02.md  ked2024_03.md  ked2024_04.md  ked2024_05.md  ked2024_06.md  ked2024_07.md  ked2024_08.md  ked2024_09.md  ked2024_10.md  ked2024_11.md  ked2024_12.md
ked2024/materials/: cheatsheet_command_line.md  installation_guide.md
ked2024/materials/code/: pandas_select_by_regex.py
ked2024/materials/code/extract_forum_posts/: extract_forum_posts.py
ked2025/: _quarto.yml  assignments.qmd  materials.qmd
ked2025/assignments/assignment_2/: 1513.txt.utf-8
ked2025/lectures/md/: _quarto.yml  ked2024_02.md  ked2024_05.md
ked2025/materials/: cheatsheet_command_line.md
ked2025/materials/analysis/: sents_poverty.txt
ked2025/materials/code/: python_basics.ipynb
ked2025/materials/data/swiss_party_programmes/: corpus_party_programmes.csv
utils/: get_dates.py  replace_emoji.py  utils.sh
