[tool.poetry]
name = "ked"
version = "0.1.0"
description = "The ABC of Computational Text Analysis. BA Seminar, Spring 2024, University of Lucerne"
authors = ["Alex Flückiger"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
wheel = "^0.45.1"
pandas = "^2.2.3"
matplotlib = "^3.10"
jupyterlab = "^4.3.0"
textacy = "^0.13.0"
scattertext = "^0.2.2"
spacy = "^3.8.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl"}
ipywidgets = "^8.1.5"
beautifulsoup4 = "^4.12.2"
plotnine = "^0.14.4"
jupyter = "^1.0.0"
# pytesseract = "^0.3.10"
# pdf2image = "^1.16.3"
pypdf = "^3.17.4"
bulk = "^0.4.1"
embetter = "^0.6.4"
umap-learn = "^0.5.7"
datamapplot = "^0.4.2"

[tool.poetry.group.dev.dependencies]
doit = "^0.36.0"
ruff = "^0.7.2"
jupyterlab-rise = "^0.42.0"
poetry-plugin-export = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
